# esp-theoretical-thermostat

./: .autoenv.zsh  .clangd  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  README.md  device-stream-discovery.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32p4
.ai/: AGENTS.md
.github/: copilot-instructions.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
assets/: message-screen-design.md  theoretical-thermostat.pen
assets/audio/: README.md  soundgen.toml
assets/fonts/: fontgen.toml
assets/images/: imagegen.toml
components/codec_board/: CHANGELOG.md  board_cfg.txt  idf_component.yml
components/esp32_p4_nano/: CMakeLists.txt  idf_component.yml
docs/: manual-test-plan.md
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  idf_component.yml  test_esp_lcd_hx8394.c  theo_device_identity.c  theo_device_identity.h  thermostat_ui.c  thermostat_ui.h
main/assets/: lv_attr_overrides.h
main/assets/audio/: boot_chime.c  failure.c  scott_greeting.c
main/assets/fonts/: figtree_medium_34.c  figtree_medium_39.c  figtree_medium_40.c  figtree_semibold_30.c  figtree_semibold_34.c  figtree_semibold_39.c  figtree_tnum_medium_39.c  figtree_tnum_medium_50.c  figtree_tnum_semibold_120.c  thermostat_fonts.h
main/assets/images/: breezy.c  clear_day.c  clear_night.c  cloudy.c  dangerous_wind.c  drizzle.c  fan.1.c  fan.c  fan_frame_0.c  fan_frame_108.c  fan_frame_12.c  fan_frame_120.c  fan_frame_132.c  fan_frame_144.c  fan_frame_156.c  fan_frame_168.c  fan_frame_180.c  fan_frame_192.c  fan_frame_204.c  fan_frame_216.c  fan_frame_228.c  fan_frame_24.c  fan_frame_240.c  fan_frame_252.c  fan_frame_264.c  fan_frame_276.c  fan_frame_288.c  fan_frame_300.c  fan_frame_312.c  fan_frame_324.c  fan_frame_336.c  fan_frame_348.c  fan_frame_36.c  fan_frame_360.c  fan_frame_48.c  fan_frame_60.c  fan_frame_72.c  fan_frame_84.c  fan_frame_96.c  fire.1.c  (+59 more)
main/connectivity/: device_identity.c  device_identity.h  device_info.c  device_info.h  device_ip_publisher.c  device_ip_publisher.h  device_telemetry.c  device_telemetry.h  esp_hosted_link.c  esp_hosted_link.h  ha_discovery.c  ha_discovery.h  http_server.c  http_server.h  mqtt_dataplane.c  mqtt_dataplane.h  mqtt_log_mirror.c  mqtt_log_mirror.h  mqtt_manager.c  mqtt_manager.h  ota_server.c  ota_server.h  runtime_health.c  runtime_health.h  time_sync.c  time_sync.h  transport_monitor.c  transport_monitor.h  wifi_remote_manager.c  wifi_remote_manager.h
main/sensors/: env_sensors.c  env_sensors.h  radar_presence.c  radar_presence.h
main/streaming/: camera_snapshot_publisher.c  camera_snapshot_publisher.h  h264_stream.c  h264_stream.h  microphone_capture.c  microphone_capture.h  mjpeg_stream.c  mjpeg_stream.h  pcm_audio_stream.c  pcm_audio_stream.h  streaming_state.c  streaming_state.h  webrtc_stream.c  webrtc_stream.h  whep_endpoint.c  whep_endpoint.h  whep_signaling.c  whep_signaling.h
main/thermostat/: application_cues.c  application_cues.h  audio_boot.c  audio_boot.h  audio_driver.h  audio_driver_bsp_codec.c  audio_driver_max98357.c  audio_personal.h  backlight_manager.c  backlight_manager.h  ir_led.c  ir_led.h  remote_setpoint_controller.c  remote_setpoint_controller.h  thermostat_led_status.c  thermostat_led_status.h  thermostat_leds.c  thermostat_leds.h  thermostat_personal_presence.c  thermostat_personal_presence.h  transport_overlay.c  transport_overlay.h  ui_actions.c  ui_actions.h  ui_animation_timing.h  ui_entrance_anim.c  ui_entrance_anim.h  ui_helpers.c  ui_helpers.h  ui_ota_modal.c  ui_ota_modal.h  ui_setpoint_input.c  ui_setpoint_input.h  ui_setpoint_view.c  ui_setpoint_view.h  ui_splash.c  ui_splash.h  ui_state.h  ui_theme.c  ui_theme.h  (+2 more)
scratch/: README.md
scripts/: archive-change.sh  generate_fonts.py  generate_fonts.sh  generate_images.py  generate_sounds.py  init-worktree.sh  plot_heap_usage.py  preview_icons.py  push-ota.sh  report-iram-usage.mjs  start-change.sh  theocal.py  theocam.py  theoctl.py  theodumpthresholds.py  theoprobe.py  theotail.py
specs/: home-assistant-connectivity.md  thermostat-migration.md  thermostat-ui-refactor.md
(+377 files in other folders)
